syntax = "proto3";

package SMTSP.protocol.communication;
import "discovery.proto";

message KeyExchange {
    bytes public_key = 1;
    bytes iv = 2;
}

message EncryptionRequest {
    bytes public_key = 1;
}

message TransferRequest {
    string id = 1;
    discovery.Device device = 2;
    CommunicationIntents intent = 3;

    enum CommunicationIntents {
        SINGLE_FILE_TRANSFER = 0;
        MULTIPLE_FILES_TRANSFER = 1;
        CLIPBOARD_TRANSFER = 2;
    }
}

message TransferRequestResponse {
    Answers answer = 1;

    enum Answers {
        DENY = 0;
        ACCEPT = 1;
    }
}

message FileInfo {
    string file_name = 1;
    int64 file_size = 2;
}

message FileTransferIntent {
    repeated FileInfo file_info = 1;
}

message ClipboardTransferIntent {
    repeated string clipboard_content = 1;
}
